--- a/snap.html
+++ b/snap.html
@@ -30,6 +30,7 @@
 				world.doOneCycle();
 			}
 		</script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 	</head>
 	<body style="margin: 0;">
 		<canvas id="world" tabindex="1" style="position: absolute;" />
